# realsense_mipi_platform_driver

./: CODE_OF_CONDUCT.md  COPYRIGHT  COPYRIGHT.md  Dockerfile  Intel Copyright  LICENSE  README.md  README_JP4.md  README_JP5.md  README_JP6.md  README_driver.md  README_tools.md  Read.me  Security.md  apply_patches.sh  apply_patches_ext.sh  build_all.sh  build_all_deb.sh  d4xx.c  setup_workspace.sh  tegra194-camera-d4xx-single.dtsi  tegra194-camera-d4xx.dtsi
.github/workflows/: build-jp5.yml  build-jp502.yml  build-jp512.yml  build-jp6.yml
docker/: Dockerfile.build  Dockerfile.env  Makefile  README.md
hardware/realsense/: tegra194-camera-d4xx-dual.dtsi  tegra194-camera-d4xx-generic.dtsi  tegra194-camera-d4xx-single.dtsi  tegra194-camera-d4xx.dtsi  tegra234-camera-d4xx-overlay.dts
kernel/kernel-4.9/: 0001-D4XX-ds5-First-basic-depth-driver.patch  0001-d4xx-old-driver-enablement.patch  0002-d4xx-Add-all-depth-resolution.patch  0002-d4xx-enable-meta-data.patch  0002-metadata-patches.patch  0003-Added-y8i-support-description.patch  0003-d4xx-Adding-missed-functionality.patch  0003-external-build.patch  0004--d4xx-v4l2-controls-impl.patch  0004-Implementing-RGB-support.patch  0004-dx44-Fixing-probe-fail-path.patch  0005-d4xx-DFU-fix.patch  0006-d4xx-D431-flayvor-impl.patch  0082-realsense-metadata-L4T-4.4.1.patch  (+1 more)
kernel/realsense/: d4xx.c
nvidia-oot/: Makefile
scripts/: SerDes_D457.sh  SerDes_D457_1.0.0.5.sh  SerDes_D457_1.0.0.6.sh  SerDes_D457_1.0.0.7.sh  SerDes_D457_1.0.0.7a.sh  SerDes_D457_1.0.0.8.sh  SerDes_D457_1.0.0.8a.sh  SerDes_D457_1.0.0.9.sh  SerDes_D457_1.0.0.9a.sh  Serdes_D457_1.0.0.A.sh  Serdes_D457_Multistream.sh  compile_all.sh  setup-common  source_sync_4.6.1.sh  source_sync_5.0.2.sh  source_sync_5.1.2.sh  test_laser_power  test_laser_power.cpp
tests/: MetaData.h  V4L2ControlsTest.cpp  V4L2StreamingTest.cpp  json_test.cpp  main.cpp
utilities/: Presets.py  main.py
utilities/streamApp/: CMakeLists.txt  ds5_fw_logger.cpp  hwmc.cpp  v4l2_ds5_mipi.cpp
utilities/streamApp/camera_sub_system/: CameraCapabilities.cpp  Stream.cpp
utilities/streamApp/camera_sub_system/include/: CSSTypes.h  CameraCapabilities.h  Stream.h
utilities/streamApp/gui/: StreamView.cpp
utilities/streamApp/gui/include/: StreamView.h
utilities/streamApp/imgui/: imgui.h  rs_mipi_viewer.cpp
utilities/streamApp/imgui/examples/example_glfw_opengl3/: main.cpp
utilities/streamApp/utils/: RealsenseAutoLogger.cpp  RealsenseLogger.cpp  ScopedFileDescriptor.cpp  StreamUtils.cpp
utilities/streamApp/utils/include/: RealsenseAutoLogger.h  RealsenseLog.h  RealsenseLogger.h  ScopedFileDescriptor.h  StreamUtils.h
(+193 files in other folders)
